# matmat-ademe

./: .gitignore  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE-EN.txt  LICENSE-FR.txt  LICENSE.txt  README.md  make  pylintrc.toml  pyproject.toml
.github/: ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml  linux-tests.yml  macos-tests.yml  windows-tests.yml
docs/: DOCSTRING_TEMPLATE.py  run_docs.sh
docs/UML/: accounts.puml  extension.puml  extension_shock.puml  shocks.puml  system.puml  system_shock.puml
docs/source/: conf.py  index.rst
docs/source/tree/: utils.rst  workflows.rst
docs/source/tree/core/: accounts.rst  base.rst  bridge.rst  data.rst  dataset.rst  detail_level.rst  shocks.rst
docs/source/tree/utils/: constants.rst  formats.rst
docs/source/tree/workflows/: adapters.rst  engines.rst  pipelines.rst
src/matmat/: __init__.py  cli.py
src/matmat/core/: __init__.py
src/matmat/core/accounts/: __init__.py  builder.py  core.py  identity.py
src/matmat/core/base/: __init__.py  builder.py  filter.py  identity.py  matrix.py  pool.py
src/matmat/core/bridge/: core.py  factory.py  pool.py  tools.py
src/matmat/core/data/: __init__.py  core.py
src/matmat/core/dataset/: __init__.py  config.py  core.py  mixins.py
src/matmat/core/detail_level/: core.py  factory.py  tools.py
src/matmat/core/shocks/: __init__.py  builder.py  core.py  identity.py  mixins.py  tools.py
src/matmat/utils/: __init__.py  checks.py  config.py  errors.py  logging.py  mixins.py  tools.py
src/matmat/utils/constants/: __init__.py  core.py  domain.py  index.py  io.py  version.py
src/matmat/utils/formats/: __init__.py  core.py  factory.py
src/matmat/workflows/: __init__.py  core.py  identity.py  metadata.py  run.py
src/matmat/workflows/adapters/: __init__.py  core.py  identity.py
tests/: .coveragerc  run_tests.sh
tests/.configs/: .config_dev.py  .config_full.py
tests/integration_tests/: test_accounts.py  test_accounts_shock.py  test_extension.py  test_extension_shock.py  test_system.py  test_system_shock.py
tests/unit_tests/: conftest.py
tests/unit_tests/utils/: test_tools.py
tests/utils/: builders.py  spy.py  tools.py
tests/utils/constants/: __init__.py  extension_categories.py  final_demand_categories.py  regions.py  sectors.py
(+157 files in other folders)
